Configuration for Cg95 branches 2.1
git-svn-id: https://svn.exoplatform.org/projects/tools/trunk@41437 42d3c691-033b-0410-95b4-af486b8189e5